# dr_ingest

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/wandb/: base.cfg  hooks.cfg  metrics.cfg  patterns.cfg  processing.cfg
docs/: AGENT_GUIDE_by-tomorrow-app.md  AGENT_GUIDE_datadec.md  AGENT_GUIDE_datadec_notebooks.md  AGENT_GUIDE_ddpred.md  AGENT_GUIDE_dr_showntell.md  AGENT_GUIDE_dr_wandb.md  DATA_ARTIFACTS.md  PROJECT_OVERVIEW.md  REPO_MAP.md  ROADMAP.md  documentation_organizer_guide.md  tooling_stack_notes.md
docs/notes/datadec_metrics_all/: ARTIFACT_NOTES.md
docs/prompts/: datadec_dedupe_fix.md
notebooks/: dd-results.py  dd_query.py  dd_res.py  dd_upload.py  download_raw.py  duck_wandb.py  metrics_all_ingest.py  new_ingest.py  qa_instances_ingest.py  test_hf.py
notebooks/__marimo__/session/: dd_query.py.json  dd_upload.py.json
scripts/: dd_results.py  parse_scaling_law.py  parse_scaling_laws.py  parse_train.py  parse_train_debug.py
src/dr_ingest/: __init__.py  db_create_insert.py  db_types.py  df_ops.py  hf_location.py  hf_upload.py  json_utils.py  normalization.py  parallel.py  parse.py  raw_download.py  serialization.py  types.py
src/dr_ingest/cli/: datadec_ingest.py  parse_scaling_laws.py  parse_train.py
src/dr_ingest/configs/: __init__.py  auth.py  (+3 more)
tests/: test_dd_results_pipeline.py  test_df_ops.py  test_normalization.py
tests/fixtures/: __init__.py  build_wandb_samples.py
tests/qa/: test_extraction.py  test_transform.py
tests/wandb/: test_classifier.py  test_metrics.py  test_postprocess.py  test_summary.py  test_utils.py
(+43 files in other folders)
