[project]
name = "dr-ingest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "attrs>=23.2.0",
    "catalogue>=2.0.10",
    "confection>=0.1.5",
    "memo>=0.2.4",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "typer>=0.19.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
